# matrix

./: .gitignore  Cargo.toml  README.md
crates/matrix_core/: Cargo.toml
crates/matrix_core/src/: config.rs  constants.rs  lib.rs  region.rs  types.rs
crates/matrix_gpu/: Cargo.toml
crates/matrix_gpu/shaders/: nbody.wgsl
crates/matrix_gpu/src/: buffers.rs  context.rs  dispatch.rs
crates/matrix_physics/: Cargo.toml
crates/matrix_physics/src/: cosmology.rs  forces.rs  lib.rs  particle.rs  procgen.rs  spacetime.rs  thermodynamics.rs
crates/matrix_render/: Cargo.toml
crates/matrix_render/src/: camera.rs  cosmos.rs  lib.rs  menu.rs  particles.rs  plugin.rs  surface.rs  ui.rs
crates/matrix_sim/: Cargo.toml
crates/matrix_sim/src/: lazy_universe.rs  lib.rs  pipeline.rs  state.rs  universe.rs
crates/matrix_storage/: Cargo.toml
crates/matrix_storage/src/: lib.rs
src/: main.rs
