[workspace]
members = [
    "crates/matrix_core",
    "crates/matrix_physics",
    "crates/matrix_gpu",
    "crates/matrix_sim",
    "crates/matrix_render",
    "crates/matrix_storage",
]
resolver = "2"

[workspace.dependencies]
bevy = "0.15"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytemuck = { version = "1.25", features = ["derive"] }

# Internal crates
matrix_core = { path = "crates/matrix_core" }
matrix_physics = { path = "crates/matrix_physics" }
matrix_gpu = { path = "crates/matrix_gpu" }
matrix_sim = { path = "crates/matrix_sim" }
matrix_render = { path = "crates/matrix_render" }
matrix_storage = { path = "crates/matrix_storage" }

[package]
name = "matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
matrix_core = { workspace = true }
matrix_physics = { workspace = true }
matrix_gpu = { workspace = true }
matrix_sim = { workspace = true }
matrix_render = { workspace = true }
matrix_storage = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
