[package]
name = "matrix_render"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix_core = { workspace = true }
matrix_physics = { workspace = true }
matrix_sim = { workspace = true }
matrix_storage = { workspace = true }
bevy = { workspace = true }
bytemuck = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
